MODCLUSTER-777 Synchronize code changes with the Tomcat 11.0 module.