@@ -1,23 +1,6 @@
 /*
- * JBoss, Home of Professional Open Source.
- * Copyright 2009, Red Hat Middleware LLC, and individual contributors
- * as indicated by the @author tags. See the copyright.txt file in the
- * distribution for a full listing of individual contributors.
- *
- * This is free software; you can redistribute it and/or modify it
- * under the terms of the GNU Lesser General Public License as
- * published by the Free Software Foundation; either version 2.1 of
- * the License, or (at your option) any later version.
- *
- * This software is distributed in the hope that it will be useful,
- * but WITHOUT ANY WARRANTY; without even the implied warranty of
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
- * Lesser General Public License for more details.
- *
- * You should have received a copy of the GNU Lesser General Public
- * License along with this software; if not, write to the Free
- * Software Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA
- * 02110-1301 USA, or see the FSF site: http://www.fsf.org.
+ * Copyright The mod_cluster Project Authors
+ * SPDX-License-Identifier: Apache-2.0
  */
 package org.jboss.modcluster.container.tomcat;
 
@@ -44,6 +27,7 @@ import org.jboss.modcluster.load.metric.impl.BusyConnectorsLoadMetric;
 import javax.management.MalformedObjectNameException;
 import javax.management.ObjectName;
 import java.lang.management.ManagementFactory;
+import java.lang.reflect.InvocationTargetException;
 import java.net.InetAddress;
 import java.net.InetSocketAddress;
 import java.net.NetworkInterface;
@@ -94,8 +78,8 @@ public class ModClusterListener extends ModClusterConfig implements TomcatConnec
             @Override
             public LoadMetric run() {
                 try {
-                    return ModClusterListener.this.loadMetricClass.newInstance();
-                } catch (IllegalAccessException | InstantiationException e) {
+                    return ModClusterListener.this.loadMetricClass.getConstructor().newInstance();
+                } catch (IllegalAccessException | InstantiationException | NoSuchMethodException | InvocationTargetException e) {
                     throw new IllegalArgumentException(e);
                 }
             }
@@ -157,8 +141,8 @@ public class ModClusterListener extends ModClusterConfig implements TomcatConnec
             @Override
             public JvmRouteFactory run() {
                 try {
-                    return factoryClass.newInstance();
-                } catch (IllegalAccessException | InstantiationException e) {
+                    return factoryClass.getConstructor().newInstance();
+                } catch (IllegalAccessException | InstantiationException | NoSuchMethodException | InvocationTargetException e) {
                     throw new IllegalArgumentException(e);
                 }
             }
